--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-logfile.txt
+src/lepg/logfile.txt
 userHelp/userHelp.mkdocs
 userHelp/userHelp.mkdocs/hello.html
 userHelp/userHelp.mkdocs/index.html
 userHelp/userHelp.mkdocs/search/search_index.json
 userHelp/userHelp.mkdocs/sitemap.xml
 userHelp/userHelp.mkdocs/sitemap.xml.gz
+exportTestFiles/
+/__pycache__
+*.pyc
