--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-lepg/logfile.txt
+# Logfiles
+logfile.txt
+
+# Intermediate files from help system
 userHelp/userHelp.mkdocs
 userHelp/userHelp.mkdocs/hello.html
 userHelp/userHelp.mkdocs/index.html
@@ -7,5 +10,6 @@ userHelp/userHelp.mkdocs/sitemap.xml
 userHelp/userHelp.mkdocs/sitemap.xml.gz
 exportTestFiles/
 
+# all Python chache files
 /__pycache__
 *.pyc
