--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Logfiles
-/src/lepg/logfile.txt
+src/lepg/logfile.txt
 
 # Config file
-/src/lepg/configFile.txt
+src/lepg/configFile.txt
 
 # Intermediate files from help system
 userHelp/userHelp.mkdocs
@@ -12,6 +12,10 @@ userHelp/userHelp.mkdocs/search/search_index.json
 userHelp/userHelp.mkdocs/sitemap.xml
 userHelp/userHelp.mkdocs/sitemap.xml.gz
 exportTestFiles/
+
+# Intermediate files from installer
+installer/build/
+installer/dist-W64/
 
 # all Python chache files
 /__pycache__
